Closed Bug 336679 Opened 20 years ago Closed 20 years ago

the text/lines disappears, related to inline spellchecking.

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: bugmozz, Assigned: brettw)

References

()

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20060504 BonEcho/2.0a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20060504 BonEcho/2.0a1 ID:2006050415 since Bug#335306 check-in was landed, if focus is not on text area, the line disappear. this happens on any lines/sites at random. screen shot : http://img79.imageshack.us/img79/3540/spellcheck4rc.jpg Reproducible: Sometimes
Reliable steps to reproduce please (I haven't seen this yet with casual testing). And does is also occur in safe mode ?
(In reply to comment #1) > Reliable steps to reproduce please (I haven't seen this yet with casual > testing). And does is also occur in safe mode ? > click on page, not in text area. screen shot (example) : http://img72.imageshack.us/img72/4690/text2yi.jpg this happens, but not always/not every time.
I also saw this bug but I haven't found steps to reproduce it reliably, yet.
This happens when the text contains non-English characters. Steps to reproduce: 1. Paste these characters in a text area: ä ö å ą ł ń ź. 2. After they are underlined as misspelled, click outside the area. Results: the line containing these characters disappears.
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 336712 has been marked as a duplicate of this bug. ***
(In reply to comment #4) > This happens when the text contains non-English characters. > > Steps to reproduce: > 1. Paste these characters in a text area: ä ö å ą ł ń ź. > 2. After they are underlined as misspelled, click outside the area. > > Results: the line containing these characters disappears. > [Addition] containing Japanese language, too. example : commentt 小泉 maybe the line including non-English words or phrases disappears.
It seems that spans in textareas containing non-ASCII characters AND words marked as misspelled don't paint properly. It doesn't have to be any specific language, even the copyright symbol causes this problem. Typically, the span will correspond to a line, but may have a smaller range in some cases.
Attached patch PatchSplinter Review
Assignee: nobody → brettw
Status: NEW → ASSIGNED
Attachment #221023 - Flags: review?
Attachment #221023 - Flags: review? → review?(dbaron)
The ASCII case is working, I duplicated the condition on this line: http://lxr.mozilla.org/mozilla1.8/source/layout/generic/nsTextFrame.cpp#3627 In the unicode version, the conditions that cause the text not be drawn are: displaySelection && isSelected && hideStandardSelection Here is where we start testing thest flags: http://lxr.mozilla.org/mozilla1.8/source/layout/generic/nsTextFrame.cpp#2602 Watch out, the indentation is off in one of the nested ifs
Attachment #221023 - Flags: review?(dbaron) → review?(roc)
Comment on attachment 221023 [details] [diff] [review] Patch Heroic effort Brett :-)
Attachment #221023 - Flags: superreview+
Attachment #221023 - Flags: review?(roc)
Attachment #221023 - Flags: review+
Severity: normal → major
Flags: blocking-firefox2?
Confirming the problem with Bon Echo 2.0a2. This is very annoying when editing European text with diacritics, as lines disappear very often. Isn't this bug related to bug #282506 targeting Thunderbird? The screenshots of this one seem to show the same behavior.
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Target Milestone: --- → Firefox 2 alpha3
Whiteboard: check in on trunk
Fixed on trunk, leaving open for branch checkin later assuming nothing breaks.
Whiteboard: check in on trunk → baking on trunk
Component: General → Layout: Misc Code
Flags: review+
Flags: blocking-firefox2?
Product: Firefox → Core
QA Contact: general → layout
Target Milestone: Firefox 2 alpha3 → ---
Version: unspecified → Trunk
Flags: blocking1.8.1?
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060515 Minefield/3.0a1 ID:2006051517 [cairo] confirmed. WFM
There is a bug: If first character in line is misspelled (and thus underlined) you cannot move caret backwards to preceding line. It is very easy to test, just change something in the beginning so that it comes misspelled and try to go backwards. Caret stops at the end of preceding line.
(In reply to comment #14) Sorry I forgot my build id: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060517 Minefield/3.0a1 - Build ID: 2006051703 This kind of nonsense text shows clearly the bug: asd fasd fasdf asdf sd fasd asdf sadf asd asda sfasaf asd fasd fasdf asdf sd fasd asdf asdf asdds sadf asd asda sfasaf asd fasd fasdf asdf sd sad fasd asdf sadf asd asda sfasaf.
oruasi: please file a new bug & CC me, thanks.
Comment on attachment 221023 [details] [diff] [review] Patch I haven't heard of any problems with the patch, and it seems to have also resolved longstanding Thunderbird an Seamonkey bugs.
Attachment #221023 - Flags: approval-branch-1.8.1?(roc)
Attachment #221023 - Flags: approval-branch-1.8.1?(roc) → approval-branch-1.8.1+
Fixed on branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: baking on trunk
*** Bug 291393 has been marked as a duplicate of this bug. ***
I am still observing this bug. User agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a2) Gecko/20060519 BonEcho/2.0a2 Very simple testcase: in Bugzilla, type "é" in the "additional comments" text area, and then a carriage return. "é" gets underlined because it is not a valid word. Then, click outside of the text area. The "é" disappears. I think that this bug should be reopened, because it does not appear to be fixed on branch.
You(In reply to comment #20) > I am still observing this bug. > > User agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a2) > Gecko/20060519 BonEcho/2.0a2 It was fixed in a3.
Flags: blocking1.8.1?
*** Bug 360822 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: