Bug 336679 r+sr=roc the text/lines disappears when spellchecking Unicode text and focus is lost